fix overflow

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ a {
   margin-top: 48px;
   position: fixed;
   top: 48px;
-  overflow-y: scroll;
+  overflow: auto;
   height: 100%;
 }
 
